@@ -1,10 +1,10 @@
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
-import java.util.*
 
 plugins {
     kotlin("jvm") version "2.2.0" // Kotlin Plugin
     id("org.openjfx.javafxplugin") version "0.1.0" // JavaFX Plugin
     id("com.gradleup.shadow") version "8.3.8" //Shadow Plugin
+    id("edu.sc.seis.launch4j") version "3.0.0"
     application
 }
 
@@ -14,6 +14,7 @@ version = "0.2.3-SNAPSHOT"
 repositories {
     mavenCentral()
     maven { url = uri("https://jitpack.io") }
+    gradlePluginPortal()
 }
 
 dependencies {
@@ -25,6 +26,7 @@ dependencies {
     implementation("org.webjars.npm:types__filewriter:0.0.29")
     implementation("org.jetbrains:annotations:26.0.2")
     implementation("org.slf4j:slf4j-api:2.0.17")
+    implementation("edu.sc.seis.launch4j:launch4j:3.0.0")
     implementation("ch.qos.logback:logback-classic:1.5.18")
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.13.4")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.13.4")
@@ -52,6 +54,12 @@ javafx {
     modules("javafx.controls", "javafx.fxml")
 }
 
+launch4j {
+    mainClassName = "idiotamspielen.vttproject.MainKt"
+    jarTask = tasks.shadowJar
+    outfile = "build/launch4j/VTT.exe"
+}
+
 application {
     mainClass.set("idiotamspielen.vttproject.MainKt") // Hauptklasse
 }
@@ -63,26 +71,6 @@ tasks {
         archiveVersion.set(project.version.toString())        // Nutzt die in der Version definierte Nummer
         mergeServiceFiles()                // Wichtig für das Zusammenführen
     }
-}
-
-tasks.register<Exec>("jpackage") {
-    group = "distribution"
-    description = "Erstelle ein distributables Anwendungspaket"
-
-    dependsOn("shadowJar") // Stelle sicher, dass die JAR-Datei erstellt wird
-
-    commandLine = listOf(
-        "jpackage",
-        "--input", "build/libs",
-        "--dest", "build/jpackage",
-        "--name", "VTT",
-        "--main-jar", "VTT-0.2.3-SNAPSHOT.jar",
-        "--main-class", "idiotamspielen.vttproject.MainKt",
-        "--type", if (System.getProperty("os.name").lowercase(Locale.getDefault()).contains("windows")) "exe" else "app-image",
-        "--add-modules", "javafx-controls,javafx.fxml",
-        "--java-options",
-            "--enable-preview"
-    )
 }
 
 tasks.withType<Test> {
